--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@capacitor/haptics": "1.1.4",
     "@capacitor/ios": "3.4.3",
     "@capacitor/keyboard": "1.2.2",
+    "@capacitor/share": "^1.1.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/pwa-elements": "^3.1.1",
     "@ionic/react": "^5.9.3",
