--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@capacitor/app": "1.1.1",
     "@capacitor/camera": "^1.3.1",
     "@capacitor/core": "3.4.3",
+    "@capacitor/geolocation": "^1.3.1",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/ios": "3.4.3",
     "@capacitor/keyboard": "1.2.2",
