--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.26.1",
     "formik": "^2.2.9",
     "ionicons": "^5.4.0",
     "prettier": "^2.5.1",
